# FeedRSSbot

./: .gitignore  Cargo.toml  README.md
src/: feed.rs  lib.rs  user.rs
src/bot/: mod.rs
src/bot/routes/: invalid_command.rs  main_menu.rs  mod.rs  start.rs
