[package]
name = "rssbot"
authors = ["Alice Carra"]
repository = "https://github.com/alicecarra/rssbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = { version = "2.0", features = ["builders", "validation", "with-serde", "atom"]} 
serde = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"